# telegenic

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: check.yml  format.yml  publish.yml
examples/: discover.rs  force_ip.rs  grab.py  grab.rs  info.rs  snap.rs  viewer.rs
py_src/telegenic/: __init__.py  __init__.pyi
scripts/: fmt.sh
src/: error.rs  handle.rs  lib.rs  py.rs  thread_util.rs  valuable_error.rs  valuable_impls.rs
src/emulator/: mod.rs  xml.rs
src/genicam/: acquisition.rs  evaluator.rs  mod.rs  node.rs  port.rs  snapshot.rs  url.rs  xml.rs  zip.rs
src/gige/: discovery.rs  mod.rs  runner.rs
src/gige/proto/: bootstrap.rs  gvcp.rs  gvsp.rs  mod.rs
src/gige/stream/: frame.rs  mod.rs  runner.rs
tests/: control.rs  discovery.rs  end_to_end.rs  genicam.rs  stream.rs
tests/fake_camera/: mod.rs
