[package]
name = "telegenic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
event-listener = "5.4.1"
flume = "0.12.0"
if-addrs = "0.15.0"
miniz_oxide = "0.9.1"
parking_lot = "0.12.5"
pyo3 = { version = "0.28", features = ["abi3-py38"], optional = true }
roxmltree = "0.21.1"
snare = { version = "1.3.1", features = ["mio-compat"] }
thiserror = "2.0.18"
tracing = "0.1.44"
zerocopy = { version = "0.8.52", features = ["derive", "std", "alloc"] }

[features]
async = ["flume/async"]
py = ["dep:pyo3"]

[dev-dependencies]
eframe = "0.34.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target."cfg(unix)".dependencies]
libc = "0.2.186"
