[package]
name = "telegenic"
version = "1.0.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Bowan Foryt <bowan@valstad.com>"]
description = "Pure-Rust GenICam camera library"
repository = "https://github.com/valstad-shipworks/telegenic"
documentation = "https://docs.rs/telegenic"
readme = "README.md"
keywords = ["python", "robotics", "genicam"]
categories = ["science::robotics", "hardware-support", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
event-listener = "5.4.1"
flume = "0.12.0"
if-addrs = "0.15.0"
miniz_oxide = "0.9.1"
parking_lot = "0.12.5"
pyo3 = { version = "0.29", optional = true }
roxmltree = "0.21.1"
snare = { version = "1.4.0", features = ["mio-compat"] }
thiserror = "2.0.18"
tracing = "0.1.44"
zerocopy = { version = "0.8.52", features = ["derive", "std", "alloc"] }

[features]
async = ["flume/async"]
emulator = []
py = ["dep:pyo3"]
abi3 = ["py", "pyo3/abi3-py310"]
abi3t = ["py", "pyo3/abi3t-py315"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
pyo3 = { version = "0.29", optional = true, features = ["generate-import-lib"] }
